# app/Http/Controllers/AuthController.php
@@ -1,13 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-
-class AuthController extends Controller
-{
-    public function unauthorized()
-    {
-        return response()->json(['errors' => 'Unauthorized'], 401);
-    }
-
-}
